# apptio-bobathon-2026-finbob-mcp-server

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  serverless.yml  start_all.sh
backend/: __init__.py  backend_service.py  lambda_handler.py  pyproject.toml  settings.py  start_backend.py  test_sharepoint_integration.py
backend/src/: __init__.py
backend/src/models/: __init__.py  inputs.py  internal.py  outputs.py
backend/src/processing/: __init__.py  csv_paginator.py  excel_processor.py  executive_summary.py
backend/src/services/: __init__.py  assessment_service.py  master_report_service.py  url_parser.py
backend/src/sharepoint/: __init__.py  cache.py  client.py  discovery.py  s3_cache.py
backend/src/tools/: __init__.py  mcp_tools.py
backend/src/utils/: __init__.py  filename_parser.py  validators.py
mcp/: .dockerignore  Dockerfile  mcp_models.py  mcp_server.py  pyproject.toml  start_mcp.py
scripts/: deploy-with-docker.sh  prepare-deployment.sh
