[project]
name = "assessments-backend"
version = "0.1.0"
description = "Backend service for CSA Assessment Reports - provides REST API to query and analyze AWS cost assessment reports from SharePoint"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=1.10.0,<2.0.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "mangum>=0.17.0",
  "boto3>=1.34.0",
  "cwshareddriveutils>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[[tool.uv.index]]
name = "cw"
url = "https://cloudwiry-282711413064.d.codeartifact.us-west-2.amazonaws.com/pypi/r0/simple/"
default = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
